--- a/src/views/contract/y-contract/edit.html
+++ b/src/views/contract/y-contract/edit.html
@@ -535,10 +535,11 @@
                             <input type="tel" name="EndTime" lay-verify="EndTime"   value="{{util.toDateString(d[1].EndTime, 'yyyy-MM-dd')}}" autocomplete="off" class="layui-input" id="EndTime" placeholder="合同结束时间">
                         </div>
                         <div class="layui-btn-group">
-                            <a class="layui-btn  layui-btn-primary btkj" idvalue="1">1月</a>
-                            <a class="layui-btn  layui-btn-primary btkj" idvalue="3">3月</a>
                             <a class="layui-btn  layui-btn-primary btkj" idvalue="6">6月</a>
-                            <a class="layui-btn  layui-btn-primary btkj" idvalue="12">一年</a>
+                            <a class="layui-btn  layui-btn-primary btkj" idvalue="12">1年</a>
+                            <a class="layui-btn  layui-btn-primary btkj" idvalue="24">2年</a>
+                            <a class="layui-btn  layui-btn-primary btkj" idvalue="36">3年</a>
+                            <a class="layui-btn  layui-btn-primary btkj" idvalue="60">5年</a>
                         </div>
                     </div>
                 </div>
