--- a/src/views/contract/y-contract/view.html
+++ b/src/views/contract/y-contract/view.html
@@ -216,7 +216,7 @@
                     </div>
                     <div class="layui-form-item">
                             <div class="layui-inline">
-                        <label class="layui-form-label">创建人</label>
+                        <label class="layui-form-label">签约人</label>
                         <div class="layui-input-inline" style="width: 150px;">
                             <input type="tel" name="CreatePerson" autocomplete="off" value="{{d[1].CreatePersonstr}}" class="layui-input gray" disabled id="Remark">
                         </div>
