--- a/src/views/house/h-house/InterView.html
+++ b/src/views/house/h-house/InterView.html
@@ -78,8 +78,8 @@ Layout = null;
                 alldata.push(data.numberData);
                 doc.objectQuery(url, { "Id": id }, function (data) {
                 alldata.push(data.numberData);
-                // imageurl=alldata[1].PrivateImage;
-                doc.objectQuery(gqurl, { "Id": ParentRoomid }, function (data) {
+                debugger;
+                doc.objectQuery(gqurl, { "Id": alldata[1].ParentRoomid }, function (data) {
                   alldata.push(data.numberData);
                   debugger;
                   if(alldata[1].PrivateImage!=null&&alldata[1].PrivateImage!="undefined"){
@@ -156,6 +156,7 @@ Layout = null;
           , { field: 'ContractTime', width: 270, title: '合同周期', templet: formattertime }
           , { field: 'Recent', width: 80, title: '租金' }
           , { field: 'Pinlv', width: 100, title: '付款频率',templet: formatterpinlv }
+          , { field: 'CreatePersonstr', width: 100, title: '签约人' }
        
     ]], height: 650, url: 'api/Contract/Query',
         ismuilti: true,"tabfield":"Status",tablebtnid: '#zbtnintable',
@@ -621,7 +622,7 @@ function formatterzhouqi(value) {
                                                </div> 
                                            </div> 
                                            <div class="layui-inline"> 
-                                            <label class="layui-form-label">门店</label> 
+                                            <label class="layui-form-label">所属部门</label> 
                                             <div class="layui-input-inline"> 
                                              <input type="text" name="email" autocomplete="off" class="layui-input gray" value="{{doc.ns(d[2].store)}}" disabled="" /> 
                                             </div> 
@@ -669,7 +670,40 @@ function formatterzhouqi(value) {
                                              <input type="text" name="Status" id="Status" autocomplete="off"  class="layui-input gray" disabled value="{{doc.ns(d[2].housekeeperphone)}}" /> 
                                             </div> 
                                     </div> 
-                                </div>     
+                                </div>
+                            <!-- 永昌 -->
+                           <!--  <div class="layui-form-item"> 
+                                        <div class="layui-inline"> 
+                                         <label class="layui-form-label">第一年</label> 
+                                         <div class="layui-input-inline"> 
+                                          <input type="text" name="yeara"   value="{{d[1].yeara}}"  autocomplete="off" disabled class="layui-input gray"  /> 
+                                         </div> 
+                                      </div> 
+                                         <div class="layui-inline"> 
+                                          <label class="layui-form-label">第二年</label> 
+                                          <div class="layui-input-inline"> 
+                                           <input type="text" name="yearb"  value="{{d[1].yearb}}" autocomplete="off" disabled class="layui-input gray" /> 
+                                          </div> 
+                                         </div> 
+                                         <div class="layui-inline"> 
+                                          <label class="layui-form-label">第三年</label> 
+                                          <div class="layui-input-inline"> 
+                                           <input type="text" name="yearc"  value="{{d[1].yearc}}" autocomplete="off" disabled  lay-verify="required"  class="layui-input gray"  /> 
+                                          </div> 
+                                         </div> 
+                                         <div class="layui-inline"> 
+                                                <label class="layui-form-label">第四年</label> 
+                                                <div class="layui-input-inline"> 
+                                                 <input type="text" name="yeard"  value="{{d[1].yeard}}" autocomplete="off" disabled  lay-verify="required"  class="layui-input gray"  /> 
+                                                </div> 
+                                        </div> 
+                                        <div class="layui-inline"> 
+                                                <label class="layui-form-label">第五年</label> 
+                                                <div class="layui-input-inline"> 
+                                                 <input type="text" name="yeare"  value="{{d[1].yeare}}" autocomplete="off" disabled  lay-verify="required"  class="layui-input gray"  /> 
+                                                </div> 
+                                        </div>        
+                                </div>     -->
                                <div class="title"> 
                                     <h3 class="red"> 图片信息</h3> 
                                    </div> 
