--- a/src/views/house/h-house/edit.html
+++ b/src/views/house/h-house/edit.html
@@ -176,7 +176,7 @@ img {
                </div> 
               </div> 
               <div class="layui-inline"> 
-               <label class="layui-form-label">价格</label> 
+               <label class="layui-form-label">报价</label> 
                <div class="layui-input-inline"> 
                 <input type="text" name="Price" autocomplete="off" class="layui-input" value="{{d[1].Price}}"  /> 
                </div> 
@@ -275,6 +275,39 @@ img {
                   </div>
                   </div>
              </div> 
+              <!--永昌-->
+            <!--  <div class="layui-form-item"> 
+                    <div class="layui-inline"> 
+                     <label class="layui-form-label">第一年</label> 
+                     <div class="layui-input-inline"> 
+                      <input type="text" name="yeara"   value="{{d[1].yeara}}"  autocomplete="off" class="layui-input"  /> 
+                     </div> 
+                  </div> 
+                     <div class="layui-inline"> 
+                      <label class="layui-form-label">第二年</label> 
+                      <div class="layui-input-inline"> 
+                       <input type="text" name="yearb"  value="{{d[1].yearb}}" autocomplete="off" class="layui-input" /> 
+                      </div> 
+                     </div> 
+                     <div class="layui-inline"> 
+                      <label class="layui-form-label">第三年</label> 
+                      <div class="layui-input-inline"> 
+                       <input type="text" name="yearc"  value="{{d[1].yearc}}" autocomplete="off"  lay-verify="required"  class="layui-input"  /> 
+                      </div> 
+                     </div> 
+                     <div class="layui-inline"> 
+                            <label class="layui-form-label">第四年</label> 
+                            <div class="layui-input-inline"> 
+                             <input type="text" name="yeard"  value="{{d[1].yeard}}" autocomplete="off"  lay-verify="required"  class="layui-input"  /> 
+                            </div> 
+                    </div> 
+                    <div class="layui-inline"> 
+                            <label class="layui-form-label">第五年</label> 
+                            <div class="layui-input-inline"> 
+                             <input type="text" name="yeare"  value="{{d[1].yeare}}" autocomplete="off"  lay-verify="required"  class="layui-input"  /> 
+                            </div> 
+                    </div>        
+            </div> -->
              <div class="title"> 
                 <h3 class="red"> 图片信息</h3> 
                </div> 
