--- a/src/views/house/h-house/add.html
+++ b/src/views/house/h-house/add.html
@@ -20,7 +20,7 @@ img {
 <script>
      var imageurl="";
      function LoadData(id,tableid,layerindex){
-      layui.use(['laypage', 'layer', 'laytpl', 'jquery', 'form'], function () {
+      layui.use(['laypage', 'layer', 'laytpl', 'jquery', 'form','treeSelect'], function () {
             var laytpl = layui.laytpl;
             var doc = layui.htcsLG;
             var $ = layui.jquery;
@@ -39,23 +39,48 @@ img {
             var getTpl = billeditscript.innerHTML
              , view = document.getElementById('bill-edit-view');
             var alldata=[];
-            var  AreamName="";
-            var  Area=0;
-            var  BusinessArea="";
-            var  location="";
+            var AreamName="";
+            var Area=0;
+            var BusinessArea="";
+            var location="";
+            var setter = layui.setter;
+            var treeSelect = layui.treeSelect;
             //加载编辑数据
             doc.objectQuery(tsurl, para, function (result) {
                     alldata.push(result.numberData);
                     doc.objectQuery(url1, {  }, function (data) {
                     alldata.push(data.numberData);
-                    doc.objectQuery(storeurl,  {"PageSize":100000,"PageIndex":1,"regtype":4}, function (data) {
-                    alldata.push(data.numberData);
                     laytpl(getTpl).render(alldata, function (html) {
                     view.innerHTML = html;
                     form.render('');
-                    });
+                    treeSelect.render({
+                    elem: '#tree',
+             
+                    url:setter.baseurl+'api/Sysrole/Querydepartment',
+             data:  {Id: -1},
+             headers: {"access_token": layui.data('layuiAdmin').access_token},
+             type: 'post',
+             placeholder: '请选择',
+             search: true,
+             style: {
+                folder: {
+                    enable: true
+                },
+                line: {
+                    enable: true
+                }
+            },
+            click: function(d){
+                $('[name="storeid"]').val(d.current.Id);
+            },
+            success: function (d) {
+               treeSelect.checkNode('tree', data.numberData.parentid);
+               var treeObj = treeSelect.zTree('tree');
+               treeSelect.refresh('tree');
+            }
+            })
                     event();
-                });
+                    });
              });
             });
             getCityList();
@@ -332,7 +357,40 @@ img {
                        </div> 
                        
                      </div> 
-                    <!-- -->
+                    <!--永昌-->
+                <!--     <div class="layui-form-item"> 
+                            <div class="layui-inline"> 
+                             <label class="layui-form-label">第一年</label> 
+                             <div class="layui-input-inline"> 
+                              <input type="text" name="yeara"  autocomplete="off" class="layui-input"  /> 
+                             </div> 
+                          </div> 
+                             <div class="layui-inline"> 
+                              <label class="layui-form-label">第二年</label> 
+                              <div class="layui-input-inline"> 
+                               <input type="text" name="yearb" autocomplete="off" class="layui-input" /> 
+                              </div> 
+                             </div> 
+                             <div class="layui-inline"> 
+                              <label class="layui-form-label">第三年</label> 
+                              <div class="layui-input-inline"> 
+                               <input type="text" name="yearc" autocomplete="off"  lay-verify="required"  class="layui-input"  /> 
+                              </div> 
+                             </div> 
+                             <div class="layui-inline"> 
+                                    <label class="layui-form-label">第四年</label> 
+                                    <div class="layui-input-inline"> 
+                                     <input type="text" name="yeard" autocomplete="off"  lay-verify="required"  class="layui-input"  /> 
+                                    </div> 
+                            </div> 
+                            <div class="layui-inline"> 
+                                    <label class="layui-form-label">第五年</label> 
+                                    <div class="layui-input-inline"> 
+                                     <input type="text" name="yeare" autocomplete="off"  lay-verify="required"  class="layui-input"  /> 
+                                    </div> 
+                            </div> 
+                             
+                    </div>  -->
                         <div id="bill-edit-view" class="child-view">
                         </div>
                         </div>
@@ -352,7 +410,7 @@ img {
         <div class="layui-inline"> 
                <label class="layui-form-label">房管员</label> 
                <div class="layui-input-inline"> 
-                      <select name="HouseKeeper" id="HouseKeeper" lay-search>
+                      <select name="HouseKeeper" id="HouseKeeper"  lay-verify="required"  lay-search>
                               <option value="">请选择</option>
                               {{#  layui.each(d[1], function(index, item1){ }}
 
@@ -362,16 +420,11 @@ img {
                </div> 
          </div>
          <div class="layui-inline"> 
-                <label class="layui-form-label">门店</label> 
-                <div class="layui-input-inline"> 
-                       <select name="storeid" id="storeid" lay-search>
-                               <option value="">请选择</option>
-                               {{#  layui.each(d[2], function(index, item1){ }}
- 
-                               <option value="{{item1.Id}}">{{item1.Name}}</option>
-                               {{# });   }}   
-                       </select>
-                </div> 
+                <label class="layui-form-label">所属部门</label>
+                <div class="layui-input-inline" style="width: 200px;">
+                    <input type="text"  autocomplete="off"  class="layui-input" id="tree" lay-filter="tree">
+                </div>
+                <input type="hidden" name="storeid" id="storeid">
           </div>
          <div class="layui-inline"> 
             <label class="layui-form-label" style="text-align:left;width:auto;">是否装修</label> 
