--- a/src/views/house/z-house/edit.html
+++ b/src/views/house/z-house/edit.html
@@ -20,7 +20,7 @@ img {
 <script>
         var imageurl="";
       function LoadData(id,tableid,layerindex){
-        layui.use(['laypage', 'layer', 'laytpl', 'jquery', 'form'], function () {
+        layui.use(['laypage', 'layer', 'laytpl', 'jquery', 'form','treeSelect'], function () {
             var laytpl = layui.laytpl;
             var doc = layui.htcsLG;
             var $ = layui.jquery;
@@ -36,13 +36,39 @@ img {
             var getTpl = billeditscript1.innerHTML
              , view = document.getElementById('bill-edit-view1');
              var alldata=[];
+             var setter = layui.setter;
+            var treeSelect = layui.treeSelect;
             debugger;
             //加载编辑数据和门店数据
             doc.objectQuery(tsurl, para, function (result) {
                 alldata.push(result.numberData);
                 doc.objectQuery(url, { "Id": id }, function (data) {
                 alldata.push(data.numberData);
-                doc.objectQuery(storeurl,  {"PageSize":100000,"PageIndex":1,"regtype":4}, function (data) {
+                treeSelect.render({
+                     elem: '#tree',
+                     url:setter.baseurl+'api/Sysrole/Querydepartment',
+                     data:  {Id: -1},
+                     headers: {"access_token": layui.data('layuiAdmin').access_token},
+                     type: 'post',
+                     placeholder: '请选择',
+                     search: true,
+                     style: {
+                folder: {
+                    enable: true
+                },
+                line: {
+                    enable: true
+                }
+            },
+            click: function(d){
+                $('[name="storeid"]').val(d.current.Id);
+            },
+            success: function (d) {
+               treeSelect.checkNode('tree', alldata[1].storeid);
+               var treeObj = treeSelect.zTree('tree');
+               treeSelect.refresh('tree');
+            }
+            })
                 alldata.push(data.numberData);
                 var image=alldata[1].PublicImg;
                 var arr=new Array();
@@ -147,7 +173,6 @@ img {
                     groupBy: 'category'
                 });
              });
-             }); 
             }); 
              
             });
@@ -386,6 +411,39 @@ img {
                  </div> 
                 </div> 
                </div> 
+                <!--永昌-->
+               <!-- <div class="layui-form-item"> 
+                    <div class="layui-inline"> 
+                     <label class="layui-form-label">第一年</label> 
+                     <div class="layui-input-inline"> 
+                      <input type="text" name="yeara"   value="{{d[1].yeara}}"  autocomplete="off" class="layui-input"  /> 
+                     </div> 
+                  </div> 
+                     <div class="layui-inline"> 
+                      <label class="layui-form-label">第二年</label> 
+                      <div class="layui-input-inline"> 
+                       <input type="text" name="yearb"  value="{{d[1].yearb}}" autocomplete="off" class="layui-input" /> 
+                      </div> 
+                     </div> 
+                     <div class="layui-inline"> 
+                      <label class="layui-form-label">第三年</label> 
+                      <div class="layui-input-inline"> 
+                       <input type="text" name="yearc"  value="{{d[1].yearc}}" autocomplete="off"  lay-verify="required"  class="layui-input"  /> 
+                      </div> 
+                     </div> 
+                     <div class="layui-inline"> 
+                            <label class="layui-form-label">第四年</label> 
+                            <div class="layui-input-inline"> 
+                             <input type="text" name="yeard"  value="{{d[1].yeard}}" autocomplete="off"  lay-verify="required"  class="layui-input"  /> 
+                            </div> 
+                    </div> 
+                    <div class="layui-inline"> 
+                            <label class="layui-form-label">第五年</label> 
+                            <div class="layui-input-inline"> 
+                             <input type="text" name="yeare"  value="{{d[1].yeare}}" autocomplete="off"  lay-verify="required"  class="layui-input"  /> 
+                            </div> 
+                    </div>        
+            </div> -->
                <div class="layui-form-item"> 
                 <div class="layui-inline"> 
                  <label class="layui-form-label" style="text-align:left;width:auto;">商圈</label> 
@@ -435,16 +493,13 @@ img {
                                   {{# });   }}   
                           </select>
                    </div> 
-                   <label class="layui-form-label">门店</label> 
-                   <div class="layui-input-inline"> 
-                          <select name="storeid" id="storeidd" lay-search>
-                                  <option value="">请选择</option>
-                                  {{#  layui.each(d[2], function(index, item1){ }}
-    
-                                  <option value="{{item1.Id}}">{{item1.Name}}</option>
-                                  {{# });   }}   
-                          </select>
-                   </div> 
+                   <div class="layui-inline"> 
+                        <label class="layui-form-label">所属部门</label>
+                        <div class="layui-input-inline" style="width: 200px;">
+                            <input type="text"  autocomplete="off"  class="layui-input" id="tree" lay-filter="tree">
+                        </div>
+                        <input type="hidden" name="storeid" id="storeid">
+                  </div>
                   </div> 
                </div> 
               
