--- a/src/views/user/forget.html
+++ b/src/views/user/forget.html
@@ -100,8 +100,8 @@ margin-right: 5px;
 <div class="layadmin-user-login layadmin-user-display-show" id="LAY-user-login" style="display: none;">
   <div class="layadmin-user-login-main">
     <div class="layadmin-user-login-box layadmin-user-login-header">
-      <h2>飞鸟管家</h2>
-      <p>飞鸟管家智能房管系统</p>
+      <h2>窝乐1号</h2>
+      <!-- <p>飞鸟管家提供技术支持</p> -->
     </div>
     <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
   
