--- a/src/views/user/login.html
+++ b/src/views/user/login.html
@@ -12,9 +12,9 @@
 
   <div class="layadmin-user-login-main">
     <div class="layadmin-user-login-box layadmin-user-login-header">
-      <h2>飞鸟管家</h2>
-      <p>飞鸟管家智能房管系统</p>
-    </div>
+      <h2>窝乐1号</h2>
+<!--       <p>飞鸟管家提供技术支持</p>
+ -->    </div>
     <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
       <div class="layui-form-item">
         <label class="layadmin-user-login-icon layui-icon layui-icon-username" for="LAY-user-login-username"></label>
