--- a/src/views/user/reg.html
+++ b/src/views/user/reg.html
@@ -110,8 +110,8 @@ img {
     <div class="layadmin-user-login layadmin-user-display-show" id="LAY-user-login" style="display: none;">
         <div class="layadmin-user-login-main">
             <div class="layadmin-user-login-box layadmin-user-login-header">
-                <h2>飞鸟管家</h2>
-                <p>此为体验版如需正式开通或者体验APP请联系客服</p>
+                <h2>窝乐1号</h2>
+              <!--   <p>飞鸟管家提供技术支持</p> -->
             </div>
             <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
                 <div class="layui-form-item">
